templates/openshift/quickstart/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-quickstart
  labels:
    app: ocp-quickstart
    app.kubernetes.io/name: ocp-quickstart
spec:
  to:
    kind: Service
    name: ocp-quickstart
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
